# sysengn

./: .gitignore  AGENTS.md  README.md  migrate_theme.py  mkdocs.yml  pyproject.toml  sysengn.db
.beads/: issues.jsonl
.github/workflows/: ci.yml
docs/: index.md
src/sysengn/: __init__.py  auth.py  home_screen.py  main.py  pm_screen.py  project_manager.py  se_screen.py
src/sysengn/core/: auth.py  project_manager.py  shell.py
src/sysengn/data/: manager.py  models.py
src/sysengn/data/schemas/: sysengn_project.yasl  sysengn_user.yasl  sysmlv2.yasl
src/sysengn/db/: database.py
src/sysengn/ui/: __init__.py  admin_screen.py  home_screen.py  login_screen.py  user_profile_screen.py
src/sysengn/ui/components/: app_bar.py  login_view.py  resizeable_panel.py  terminal.py
src/sysengn/ui/docs/: docs_screen.py
src/sysengn/ui/pm/: pm_screen.py
src/sysengn/ui/se/: se_screen.py
src/sysengn/ui/team/: team_screen.py
src/sysengn/ui/ux/: ux_screen.py
tests/sysengn/: test_admin_screen.py  test_auth.py  test_data_manager.py  test_docs_screen.py  test_home_screen.py  test_main.py  test_pm_screen.py  test_project_manager.py  test_se_screen.py  test_sysml_schema.py  test_user_profile_screen.py
tests/sysengn/data/: sysml_test_data.yaml
tests/sysengn/ui/components/: test_terminal.py  test_terminal_history.py
